--- a/run_core/build.gradle
+++ b/run_core/build.gradle
@@ -54,11 +54,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
-    annotationProcessor 'org.projectlombok:lombok'
     implementation 'com.nimbusds:nimbus-jose-jwt:9.34'
     implementation 'com.google.oauth-client:google-oauth-client:1.34.0'
     implementation 'com.google.api-client:google-api-client:2.0.0'
     implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
+    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.11.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
