--- a/run_core/src/main/resources/application-dev.yml
+++ b/run_core/src/main/resources/application-dev.yml
@@ -58,15 +58,6 @@ spring:
         jdbc:
           time_zone: Asia/Seoul
 
-  cloud:
-    aws:
-      region:
-        static: ${AWS_SQS_REGION:ap-northeast-2}
-      credentials:
-        access-key: ${AWS_SQS_ACCESS_KEY:${AWS_S3_ACCESS_KEY}}
-        secret-key: ${AWS_SQS_SECRET_KEY:${AWS_S3_SECRET_KEY}}
-      sns:
-        enabled: false  # SNS Auto-configuration 비활성화
 
 redis:
   host: ${REDIS_HOST}
@@ -93,6 +84,11 @@ apple:
     sandbox: https://sandbox.itunes.apple.com/verifyReceipt
   shared-secret: ${APPLE_SHARED_SECRET}
 
+google:
+  play:
+    package-name: ${GOOGLE_PLAY_PACKAGE_NAME:com.funyrun.app}
+    service-account-key-path: ${GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_PATH:s3://hyper-run-image/secrets/google-play-service-account.json}
+    enabled: ${GOOGLE_PLAY_ENABLED:true}
 
 oauth:
   android-client-id: ${ANDROID_OAUTH_CLIENT_KEY}
@@ -113,14 +109,31 @@ server:
 
 cloud:
   aws:
-    credentials:
-      access-key: ${AWS_S3_ACCESS_KEY}
-      secret-key: ${AWS_S3_SECRET_KEY}
-    region:
-      static: ap-northeast-2
     s3:
       bucket:
         name: hyper-run-image
+    credentials:
+      access-key: ${AWS_SQS_ACCESS_KEY:${AWS_S3_ACCESS_KEY}}
+      secret-key: ${AWS_SQS_SECRET_KEY:${AWS_S3_SECRET_KEY}}
+    region:
+      static: ${AWS_SQS_REGION:ap-northeast-2}
+    sqs:
+      enabled: true
+      region: ap-northeast-2
+      queue:
+        payment-created: ${AWS_SQS_PAYMENT_CREATED_QUEUE_NAME:payment-created-queue}
+        game-finished: ${AWS_SQS_GAME_FINISHED_QUEUE_NAME:game-finished-queue}
+      listener:
+        max-concurrent-messages: 10
+        max-messages-per-poll: 10
+        poll-timeout: 20
+        visibility-timeout: 300
+    sns:
+      enabled: ${AWS_SNS_ENABLED:true}
+      region: ap-northeast-2
+      topic:
+        payment-created: ${AWS_SNS_PAYMENT_CREATED_TOPIC_ARN:}
+        game-finished: ${AWS_SNS_GAME_FINISHED_TOPIC_ARN:}
 
 admin:
   initial:
