--- a/run_core/src/main/resources/application-prod.yml
+++ b/run_core/src/main/resources/application-prod.yml
@@ -60,15 +60,6 @@ spring:
         jdbc:
           time_zone: Asia/Seoul
 
-  cloud:
-    aws:
-      region:
-        static: ${AWS_SQS_REGION:ap-northeast-2}
-      credentials:
-        access-key: ${AWS_SQS_ACCESS_KEY:${AWS_S3_ACCESS_KEY}}
-        secret-key: ${AWS_SQS_SECRET_KEY:${AWS_S3_SECRET_KEY}}
-      sns:
-        enabled: false  # SNS Auto-configuration 비활성화
 
 redis:
   host: ${REDIS_HOST}
@@ -118,9 +109,34 @@ cloud:
     s3:
       bucket:
         name: hyper-run-image
-      credentials:
-        access-key: ${AWS_S3_ACCESS_KEY}
-        secret-key: ${AWS_S3_SECRET_KEY}
+    credentials:
+      access-key: ${AWS_SQS_ACCESS_KEY:${AWS_S3_ACCESS_KEY}}
+      secret-key: ${AWS_SQS_SECRET_KEY:${AWS_S3_SECRET_KEY}}
+    region:
+      static: ${AWS_SQS_REGION:ap-northeast-2}
+    sqs:
+      enabled: true
+      region: ap-northeast-2
+      queue:
+        payment-created: ${AWS_SQS_PAYMENT_CREATED_QUEUE_NAME:payment-created-queue}
+        game-finished: ${AWS_SQS_GAME_FINISHED_QUEUE_NAME:game-finished-queue}
+      listener:
+        max-concurrent-messages: 10
+        max-messages-per-poll: 10
+        poll-timeout: 20
+        visibility-timeout: 300
+    sns:
+      enabled: ${AWS_SNS_ENABLED:true}
+      region: ap-northeast-2
+      topic:
+        payment-created: ${AWS_SNS_PAYMENT_CREATED_TOPIC_ARN:}
+        game-finished: ${AWS_SNS_GAME_FINISHED_TOPIC_ARN:}
+
+google:
+  play:
+    package-name: ${GOOGLE_PLAY_PACKAGE_NAME:com.hyper.funyrun}
+    service-account-key-path: ${GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_PATH:s3://funny-run-secrets/funyrun-7d716a03e6f6.json}
+    enabled: ${GOOGLE_PLAY_ENABLED:true}
 
 admin:
   initial:
